Code format changes: ; char in line ends, variables renamed, blank lines between logical blocks unified custom elements names and more changes according to Dominic's notes

--- a/custom-elements/custom-element-lifecycle/enqueuing-and-invoking-callbacks/invoke-callbacks.html
+++ b/custom-elements/custom-element-lifecycle/enqueuing-and-invoking-callbacks/invoke-callbacks.html
@@ -19,11 +19,12 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.createdCallback = function() {
         callbackThis = this;
-    }
-    doc.registerElement('x-a-1', {prototype: proto});
-    doc.body.innerHTML = '<x-a-1 id="x-a-1"></x-a-1>';
-    assert_equals(doc.querySelector('#x-a-1'), callbackThis, '\'this\' value' +
-        ' of the created callback should be an element');
+    };
+    doc.registerElement('x-a', {prototype: proto});
+
+    doc.body.innerHTML = '<x-a id="x-a"></x-a>';
+    assert_equals(doc.querySelector('#x-a'), callbackThis, '\'this\' value' +
+        ' of the created callback should be the custom element');
 }, 'Test \'this\' value inside created callback.');
 
 
@@ -32,10 +33,10 @@ testInIFrame('../../resources/x-element.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackThis = this;
-    }
+    };
     doc.registerElement('x-element', {prototype: proto});
     assert_equals(doc.querySelector('#xelement'), callbackThis, '\'this\' value ' +
-        'of the attached callback should be an element');
+        'of the attached callback should be the custom element');
 }, 'Test \'this\' value inside attached callback.');
 
 
@@ -44,12 +45,13 @@ testInIFrame('../../resources/x-element.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.detachedCallback = function() {
         callbackThis = this;
-    }
+    };
     doc.registerElement('x-element', {prototype: proto});
+
     var customElement = doc.querySelector('#xelement');
     doc.body.removeChild(customElement);
     assert_equals(customElement, callbackThis, '\'this\' value ' +
-        'of the detached callback should be an element');
+        'of the detached callback should be the custom element');
 }, 'Test \'this\' value inside detached callback.');
 
 
@@ -59,12 +61,13 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.attributeChangedCallback = function() {
         callbackThis = this;
-    }
-    var GeneratedConstructor = doc.registerElement('x-a-2', {prototype: proto});
+    };
+    var GeneratedConstructor = doc.registerElement('x-b', {prototype: proto});
+
     var customElement = new GeneratedConstructor();
     customElement.setAttribute('class', 'someClass');
     assert_equals(customElement, callbackThis, '\'this\' value ' +
-        'of the attributeChanged callback should be an element');
+        'of the attributeChanged callback should be the custom element');
 }, 'Test \'this\' value inside attributeChanged callback.');
 
 
@@ -74,62 +77,15 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.attributeChangedCallback = function(arg1, arg2, arg3) {
         callbackArgs = [arg1, arg2, arg3];
-    }
-    var GeneratedConstructor = doc.registerElement('x-a-3', {prototype: proto});
+    };
+    var GeneratedConstructor = doc.registerElement('x-c', {prototype: proto});
+
     var customElement = new GeneratedConstructor();
     customElement.setAttribute('class', 'someClass');
     assert_array_equals(['class', null, 'someClass'],
                         callbackArgs,
                         'Wrong arguments passed to attributeChanged callback');
 }, 'Test attributeChanged callback\'s arguments.');
-
-
-test(function() {
-    var doc = newHTMLDocument();
-    var callbackArgs = null;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function(arg1, arg2, arg3) {
-        callbackArgs = [arg1, arg2, arg3];
-    }
-    var GeneratedConstructor = doc.registerElement('x-a-4', {prototype: proto});
-    var customElement = new GeneratedConstructor();
-    customElement.classList.add('someClass');
-    assert_array_equals(['class', null, 'someClass'],
-                        callbackArgs,
-                        'Wrong arguments passed to attributeChanged callback');
-}, 'Test attributeChanged callback\'s arguments. Callback called via classList.add()');
-
-
-test(function() {
-    var doc = newHTMLDocument();
-    var callbackArgs = null;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function(arg1, arg2, arg3) {
-        callbackArgs = [arg1, arg2, arg3];
-    }
-    var GeneratedConstructor = doc.registerElement('x-a-5', {prototype: proto});
-    var customElement = new GeneratedConstructor();
-    customElement.classList.toggle('someClass');
-    assert_array_equals(['class', null, 'someClass'],
-                        callbackArgs,
-                        'Wrong arguments are passed to attributeChanged callback');
-}, 'Test attributeChanged callback\'s arguments. Callback called via classList.toggle()');
-
-
-test(function() {
-    var doc = newHTMLDocument();
-    var callbackArgs = null;
-    var proto = Object.create(HTMLElement.prototype);
-    proto.attributeChangedCallback = function(arg1, arg2, arg3) {
-        callbackArgs = [arg1, arg2, arg3];
-    }
-    var GeneratedConstructor = doc.registerElement('x-a-6', {prototype: proto});
-    var customElement = new GeneratedConstructor();
-    customElement.className = 'someClass';
-    assert_array_equals(['class', null, 'someClass'],
-                        callbackArgs,
-                        'Wrong arguments are passed to attributeChanged callback');
-}, 'Test attributeChanged callback\'s arguments. Callback called via className = value');
 </script>
 </body>
 </html>
