--- a/custom-elements/custom-element-lifecycle/types-of-callbacks/attached-callback-test.html
+++ b/custom-elements/custom-element-lifecycle/types-of-callbacks/attached-callback-test.html
@@ -19,8 +19,9 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackCalledCounter++;
-    }
-    var GeneratedConstructor = doc.registerElement('x-a-1', {prototype: proto});
+    };
+    var GeneratedConstructor = doc.registerElement('x-a', {prototype: proto});
+
     var customElement = new GeneratedConstructor();
     assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
         'in documents that do not have a browsing context');
@@ -34,9 +35,10 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackCalledCounter++;
-    }
-    doc.registerElement('x-a-2', {prototype: proto});
-    doc.body.innerHTML = '<x-a-2></x-a-2>';
+    };
+    doc.registerElement('x-b', {prototype: proto});
+
+    doc.body.innerHTML = '<x-b></x-b>';
     assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
         'in documents that do not have a browsing context');
 }, 'Test attached callback if custom element is created via innerHTML property. ' +
@@ -49,9 +51,9 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackCalledCounter++;
-    }
-    doc.body.innerHTML = '<x-a-3></x-a-3>';
-    doc.registerElement('x-a-3', {prototype: proto});
+    };
+    doc.body.innerHTML = '<x-c></x-c>';
+    doc.registerElement('x-c', {prototype: proto});
     assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
         'in documents that do not have a browsing context');
 }, 'Test attached callback if custom element is created via innerHTML property before ' +
@@ -61,12 +63,12 @@ test(function() {
 test(function() {
     var doc = newHTMLDocument();
     var callbackCalledCounter = 0;
-    doc.body.innerHTML = '<x-a-4 id="xa"></x-a-4>';
-    var customElement = doc.querySelector('#xa');
+    doc.body.innerHTML = '<x-d id="x-d"></x-d>';
+    var customElement = doc.querySelector('#x-d');
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackCalledCounter++;
-    }
+    };
     customElement.constructor.prototype = proto;
     assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
         'for unregistered custom element in document without browsing context');
@@ -78,7 +80,7 @@ testInIFrame('../../resources/x-element.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackCalledCounter++;
-    }
+    };
     doc.registerElement('x-element', {prototype: proto});
     assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
         'in documents with browsing context');
@@ -90,8 +92,9 @@ testInIFrame('../../resources/blank.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackCalledCounter++;
-    }
+    };
     doc.registerElement('x-element', {prototype: proto});
+
     var x = doc.createElement('x-element');
     assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
         'before element is added to document with browsing context');
@@ -109,7 +112,7 @@ testInIFrame('../../resources/blank.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackCalledCounter++;
-    }
+    };
     doc.registerElement('x-element', {prototype: proto});
     assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
         'in documents with browsing context');
@@ -122,7 +125,7 @@ testInIFrame('../../resources/blank.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackCalledCounter++;
-    }
+    };
     doc.registerElement('x-element', {prototype: proto});
     doc.body.innerHTML = '<x-element></x-element>';
     assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
@@ -137,7 +140,7 @@ testInIFrame('../../resources/blank.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackCalledCounter++;
-    }
+    };
     doc.registerElement('x-element', {prototype: proto});
     assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
         'in documents with browsing context');
