--- a/custom-elements/custom-element-lifecycle/types-of-callbacks/created-callback-invocation-order-test.html
+++ b/custom-elements/custom-element-lifecycle/types-of-callbacks/created-callback-invocation-order-test.html
@@ -18,12 +18,13 @@ testInIFrame('../../resources/blank.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.createdCallback = function() {
         callbackLog.push('created');
-    }
+    };
     proto.attachedCallback = function() {
         callbackLog.push('attachedCallback');
-    }
-    doc.registerElement('x-a-1', {prototype: proto});
-    doc.body.innerHTML = '<x-a-1 id="x-a-1"></x-a-1>';
+    };
+    doc.registerElement('x-a', {prototype: proto});
+
+    doc.body.innerHTML = '<x-a id="x-a"></x-a>';
     assert_equals('created', callbackLog[0], 'The callback ' +
         callbackLog[0] + ' should be enqueued after created callback');
 }, 'Test attached callback is enqueued after created callback');
@@ -34,12 +35,13 @@ testInIFrame('../../resources/blank.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.createdCallback = function() {
         callbackLog.push('created');
-    }
+    };
     proto.attributeChangedCallback = function() {
         callbackLog.push('attributeChangedCallback');
-    }
-    doc.registerElement('x-a-2', {prototype: proto});
-    doc.body.innerHTML = '<x-a-2 id="x-a-2"></x-a-2>';
+    };
+    doc.registerElement('x-b', {prototype: proto});
+
+    doc.body.innerHTML = '<x-b id="x-b"></x-b>';
     assert_equals('created', callbackLog[0], 'The callback ' +
         callbackLog[0] + ' should not be enqueued before created callback');
 }, 'Test attributeChangedCallback callback is enqueued after created callback. ' +
@@ -52,12 +54,13 @@ test(function(){
     var proto = Object.create(HTMLElement.prototype);
     proto.createdCallback = function() {
         callbackLog.push('created');
-    }
+    };
     proto.attributeChangedCallback = function() {
         callbackLog.push('attributeChangedCallback');
-    }
-    doc.registerElement('x-a-3', {prototype: proto});
-    doc.body.innerHTML = '<x-a-3 id="x-a-3"></x-a-3>';
+    };
+    doc.registerElement('x-c', {prototype: proto});
+
+    doc.body.innerHTML = '<x-c id="x-c"></x-c>';
     assert_equals('created', callbackLog[0], 'The callback ' +
         callbackLog[0] + ' should not be enqueued before created callback');
 }, 'Test attributeChangedCallback callback is enqueued after created callback. ' +
@@ -69,14 +72,15 @@ testInIFrame('../../resources/x-element.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.createdCallback = function() {
         callbackLog.push('created');
-    }
+    };
     proto.attributeChangedCallback = function() {
         callbackLog.push('attributeChangedCallback');
-    }
+    };
     proto.attachedCallback = function() {
         callbackLog.push('attachedCallback');
-    }
+    };
     doc.registerElement('x-element', {prototype: proto});
+
     assert_equals('created', callbackLog[0], 'The callback ' +
         callbackLog[0] + ' should not be enqueued before created callback');
 }, 'Test attachedCallback and attributeChangedCallback callbacks ' +
