--- a/custom-elements/custom-element-lifecycle/types-of-callbacks/attached-callback-move-element-test.html
+++ b/custom-elements/custom-element-lifecycle/types-of-callbacks/attached-callback-move-element-test.html
@@ -19,12 +19,14 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackCalledCounter++;
-    }
-    doc.registerElement('x-a-1', {prototype: proto});
-    var customElement = doc.createElement('x-a-1');
+    };
+    doc.registerElement('x-a', {prototype: proto});
+
+    var customElement = doc.createElement('x-a');
     doc.body.appendChild(customElement);
     assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
         'in documents that do not have a browsing context');
+
     var divElement = doc.createElement('div');
     doc.body.appendChild(divElement);
     divElement.appendChild(customElement);
@@ -34,48 +36,52 @@ test(function() {
     'without browsing context');
 
 
-testInIFrame('../../resources/blank.html', function(docBC) {
-    var docNoBC = newHTMLDocument();
+testInIFrame('../../resources/blank.html', function(docWithBrowsingContext) {
+    var docNoBrowsingContext = newHTMLDocument();
     var callbackCalledCounter = 0;
     var proto1 = Object.create(HTMLElement.prototype);
     proto1.attachedCallback = function() {
         callbackCalledCounter++;
-    }
-    docNoBC.registerElement('x-a-2', {prototype: proto1});
-    var customElement = docNoBC.createElement('x-a-2');
-    docNoBC.body.appendChild(customElement);
+    };
+    docNoBrowsingContext.registerElement('x-b', {prototype: proto1});
+
+    var customElement = docNoBrowsingContext.createElement('x-b');
+    docNoBrowsingContext.body.appendChild(customElement);
     assert_equals(callbackCalledCounter, 0, 'Callback attached should not be called ' +
         'in documents that do not have a browsing context');
+
     var proto2 = Object.create(HTMLElement.prototype);
     proto2.attachedCallback = function() {
         callbackCalledCounter++;
-    }
-    docBC.registerElement('x-a-2', {prototype: proto2});
-    docBC.body.appendChild(customElement);
+    };
+    docWithBrowsingContext.registerElement('x-b', {prototype: proto2});
+    docWithBrowsingContext.body.appendChild(customElement);
     assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
         'in documents with browsing context');
 }, 'Test attached callback if moving custom element from ' +
     'document without browsing context to document with browsing context');
 
 
-testInIFrame('../../resources/blank.html', function(docBC) {
+testInIFrame('../../resources/blank.html', function(docWithBrowsingContext) {
     var callbackCalledCounter = 0;
     var proto1 = Object.create(HTMLElement.prototype);
     proto1.attachedCallback = function() {
         callbackCalledCounter++;
-    }
-    docBC.registerElement('x-a-3', {prototype: proto1});
-    var customElement = docBC.createElement('x-a-3');
-    docBC.body.appendChild(customElement);
+    };
+    docWithBrowsingContext.registerElement('x-c', {prototype: proto1});
+
+    var customElement = docWithBrowsingContext.createElement('x-c');
+    docWithBrowsingContext.body.appendChild(customElement);
     assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
         'in documents with browsing context');
-    var docNoBC = newHTMLDocument();
+
+    var docNoBrowsingContext = newHTMLDocument();
     var proto2 = Object.create(HTMLElement.prototype);
     proto2.attachedCallback = function() {
         callbackCalledCounter++;
-    }
-    docNoBC.registerElement('x-a-3', {prototype: proto2});
-    docNoBC.body.appendChild(customElement);
+    };
+    docNoBrowsingContext.registerElement('x-c', {prototype: proto2});
+    docNoBrowsingContext.body.appendChild(customElement);
     assert_equals(callbackCalledCounter, 1, 'Callback attached should not be called ' +
         'in documents that do not have a browsing context');
 }, 'Test attached callback if moving custom element from ' +
@@ -88,12 +94,14 @@ testInIFrame('../../resources/blank.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         callbackCalledCounter++;
-    }
-    doc.registerElement('x-a-4', {prototype: proto});
-    var customElement = doc.createElement('x-a-4');
+    };
+    doc.registerElement('x-d', {prototype: proto});
+
+    var customElement = doc.createElement('x-d');
     doc.body.appendChild(customElement);
     assert_equals(callbackCalledCounter, 1, 'Callback attached should be called ' +
         'in documents with browsing context');
+
     var divElement = doc.createElement('div');
     doc.body.appendChild(divElement);
     divElement.appendChild(customElement);
@@ -106,38 +114,45 @@ testInIFrame('../../resources/blank.html', function(doc) {
 var moveTest =  async_test('Test attached callback if moving custom element from ' +
     'document with browsing context to document with browsing context');
 
-moveTest.testFunction = function(doc) {
+moveTest.registerCustomElement = function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.attachedCallback = function() {
         moveTest.callbackCalledCounter++;
-    }
-    doc.registerElement('x-a-6', {prototype: proto});
-    if (moveTest.customElement){
-        // element already created move element
-        doc.body.appendChild(moveTest.customElement);
-        assert_equals(moveTest.callbackCalledCounter, 2, 'Callback attached should be called ' +
-            'in documents with browsing context');
-        moveTest.done();
-        moveTest.iframe1.parentNode.removeChild(moveTest.iframe1);
-        moveTest.iframe2.parentNode.removeChild(moveTest.iframe2);
-    } else {
-        // create element
-        moveTest.customElement = doc.createElement('x-a-6');
-        doc.body.appendChild(moveTest.customElement);
-        assert_equals(moveTest.callbackCalledCounter, 1, 'Callback attached should be called ' +
-            'in documents with browsing context');
-    }
-}
+    };
+    doc.registerElement('x-e', {prototype: proto});
+};
+
+moveTest.createCustomElement = function(doc) {
+    moveTest.customElement = doc.createElement('x-e');
+    doc.body.appendChild(moveTest.customElement);
+    assert_equals(moveTest.callbackCalledCounter, 1, 'Callback attached should be called ' +
+        'in documents with browsing context');
+    // set test's next step
+    moveTest.testFunction = moveTest.moveCustomElement;
+};
+
+moveTest.moveCustomElement = function(doc) {
+    doc.body.appendChild(moveTest.customElement);
+    assert_equals(moveTest.callbackCalledCounter, 2, 'Callback attached should be called ' +
+        'in documents with browsing context');
+    // test clean up
+    moveTest.done();
+    moveTest.iframe1.parentNode.removeChild(moveTest.iframe1);
+    moveTest.iframe2.parentNode.removeChild(moveTest.iframe2);
+};
 
 moveTest.step(function() {
     moveTest.callbackCalledCounter = 0;
+    moveTest.testFunction = moveTest.createCustomElement;
 
     moveTest.iframe1 = newIFrame('../../resources/blank.html');
     moveTest.iframe1.onload = moveTest.step_func(function() {
+        moveTest.registerCustomElement(moveTest.iframe1.contentDocument);
         moveTest.testFunction(moveTest.iframe1.contentDocument);
     });
     moveTest.iframe2 = newIFrame('../../resources/x-element.html');
     moveTest.iframe2.onload = moveTest.step_func(function() {
+        moveTest.registerCustomElement(moveTest.iframe2.contentDocument);
         moveTest.testFunction(moveTest.iframe2.contentDocument);
     });
 });
