--- a/custom-elements/custom-element-lifecycle/types-of-callbacks/created-callback-element-prototype-test.html
+++ b/custom-elements/custom-element-lifecycle/types-of-callbacks/created-callback-element-prototype-test.html
@@ -19,9 +19,9 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.createdCallback = function() {
         callbackProto = this.constructor.prototype;
-    }
-    doc.body.innerHTML = '<x-a-1 id="x-a-1"></x-a-1>';
-    doc.registerElement('x-a-1', {prototype: proto});
+    };
+    doc.body.innerHTML = '<x-a id="x-a"></x-a>';
+    doc.registerElement('x-a', {prototype: proto});
     assert_equals(callbackProto, proto, 'The custom element prototype ' +
         'is incorrect inside created callback');
 }, 'Test custom element prototype inside created callback ' +
@@ -32,13 +32,13 @@ test(function() {
 test(function() {
     var doc = newHTMLDocument();
     var callbackProto;
-
     var proto = Object.create(HTMLElement.prototype);
     proto.createdCallback = function() {
         callbackProto = this.constructor.prototype;
-    }
-    doc.registerElement('x-b-1', {prototype: proto});
-    doc.body.innerHTML = '<x-b-1 id="x-b-1"></x-b-1>';
+    };
+    doc.registerElement('x-b', {prototype: proto});
+
+    doc.body.innerHTML = '<x-b id="x-b"></x-b>';
     assert_equals(callbackProto, proto, 'The custom element prototype ' +
         'is incorrect inside created callback');
 }, 'Test custom element prototype inside created callback ' +
@@ -52,10 +52,11 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.createdCallback = function() {
         callbackProto = this.constructor.prototype;
-    }
-    var customElement = doc.createElement('x-a-2');
+    };
+
+    var customElement = doc.createElement('x-c');
     doc.body.appendChild(customElement);
-    doc.registerElement('x-a-2', {prototype: proto});
+    doc.registerElement('x-c', {prototype: proto});
     assert_equals(callbackProto, proto, 'The custom element prototype ' +
         'is incorrect inside created callback');
 }, 'Test custom element prototype inside created callback ' +
@@ -69,9 +70,10 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.createdCallback = function() {
         callbackProto = this.constructor.prototype;
-    }
-    doc.registerElement('x-b-2', {prototype: proto});
-    var customElement = doc.createElement('x-b-2');
+    };
+    doc.registerElement('x-d', {prototype: proto});
+
+    var customElement = doc.createElement('x-d');
     doc.body.appendChild(customElement);
     assert_equals(callbackProto, proto, 'The custom element prototype ' +
         'is incorrect inside created callback');
@@ -86,8 +88,9 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.createdCallback = function() {
         callbackProto = this.constructor.prototype;
-    }
-    var GeneratedConstructor = doc.registerElement('x-b-3', {prototype: proto});
+    };
+    var GeneratedConstructor = doc.registerElement('x-e', {prototype: proto});
+
     var customElement = new GeneratedConstructor();
     assert_equals(callbackProto, proto, 'The custom element prototype ' +
         'is incorrect inside created callback');
@@ -100,7 +103,7 @@ testInIFrame('../../resources/x-element.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.createdCallback = function() {
         callbackProto = this.constructor.prototype;
-    }
+    };
     doc.registerElement('x-element', {prototype: proto});
     assert_equals(callbackProto, proto, 'The custom element prototype ' +
         'is incorrect inside created callback');
