--- a/custom-elements/custom-element-lifecycle/types-of-callbacks/detached-callback-move-element-test.html
+++ b/custom-elements/custom-element-lifecycle/types-of-callbacks/detached-callback-move-element-test.html
@@ -19,9 +19,10 @@ test(function() {
     var proto = Object.create(HTMLElement.prototype);
     proto.detachedCallback = function() {
         callbackCalledCounter++;
-    }
-    doc.registerElement('x-a-1', {prototype: proto});
-    var customElement = doc.createElement('x-a-1');
+    };
+    doc.registerElement('x-a', {prototype: proto});
+
+    var customElement = doc.createElement('x-a');
     doc.body.appendChild(customElement);
     var divElement = doc.createElement('div');
     doc.body.appendChild(divElement);
@@ -32,45 +33,47 @@ test(function() {
     'without browsing context');
 
 
-testInIFrame('../../resources/blank.html', function(docBC) {
-    var docNoBC = newHTMLDocument();
+testInIFrame('../../resources/blank.html', function(docWithBrowsingContext) {
+    var docNoBrowsingContext = newHTMLDocument();
     var callbackCalledCounter = 0;
     var proto1 = Object.create(HTMLElement.prototype);
     proto1.detachedCallback = function() {
         callbackCalledCounter++;
-    }
-    docNoBC.registerElement('x-a-2', {prototype: proto1});
-    var customElement = docNoBC.createElement('x-a-2');
-    docNoBC.body.appendChild(customElement);
+    };
+    docNoBrowsingContext.registerElement('x-b', {prototype: proto1});
+
+    var customElement = docNoBrowsingContext.createElement('x-b');
+    docNoBrowsingContext.body.appendChild(customElement);
     var proto2 = Object.create(HTMLElement.prototype);
     proto2.detachedCallback = function() {
         callbackCalledCounter++;
-    }
-    docBC.registerElement('x-a-2', {prototype: proto2});
-    docBC.body.appendChild(customElement);
+    };
+    docWithBrowsingContext.registerElement('x-b', {prototype: proto2});
+    docWithBrowsingContext.body.appendChild(customElement);
     assert_equals(callbackCalledCounter, 0, 'Callback detached should not be called ' +
         'in document without browsing context');
 }, 'Test detached callback is not called if moving custom element from ' +
     'document without browsing context to document with browsing context');
 
 
-testInIFrame('../../resources/blank.html', function(docBC) {
+testInIFrame('../../resources/blank.html', function(docWithBrowsingContext) {
     var callbackCalledCounter = 0;
     var proto1 = Object.create(HTMLElement.prototype);
     proto1.detachedCallback = function() {
         callbackCalledCounter++;
-    }
-    docBC.registerElement('x-a-3', {prototype: proto1});
-    var customElement = docBC.createElement('x-a-3');
-    docBC.body.appendChild(customElement);
+    };
+    docWithBrowsingContext.registerElement('x-c', {prototype: proto1});
 
-    var docNoBC = newHTMLDocument();
+    var customElement = docWithBrowsingContext.createElement('x-c');
+    docWithBrowsingContext.body.appendChild(customElement);
+
+    var docNoBrowsingContext = newHTMLDocument();
     var proto2 = Object.create(HTMLElement.prototype);
     proto2.detachedCallback = function() {
         callbackCalledCounter++;
-    }
-    docNoBC.registerElement('x-a-3', {prototype: proto2});
-    docNoBC.body.appendChild(customElement);
+    };
+    docNoBrowsingContext.registerElement('x-c', {prototype: proto2});
+    docNoBrowsingContext.body.appendChild(customElement);
     assert_equals(callbackCalledCounter, 1, 'Callback detached should be called ' +
         'in documents with browsing context');
 }, 'Test detached callback if moving custom element from ' +
@@ -82,9 +85,10 @@ testInIFrame('../../resources/blank.html', function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.detachedCallback = function() {
         callbackCalledCounter++;
-    }
-    doc.registerElement('x-a-4', {prototype: proto});
-    var customElement = doc.createElement('x-a-4');
+    };
+    doc.registerElement('x-d', {prototype: proto});
+
+    var customElement = doc.createElement('x-d');
     doc.body.appendChild(customElement);
     var divElement = doc.createElement('div');
     doc.body.appendChild(divElement);
@@ -102,8 +106,8 @@ moveTest.testFunction = function(doc) {
     var proto = Object.create(HTMLElement.prototype);
     proto.detachedCallback = function() {
         moveTest.callbackCalledCounter++;
-    }
-    doc.registerElement('x-a-6', {prototype: proto});
+    };
+    doc.registerElement('x-e', {prototype: proto});
     if (moveTest.customElement){
         // element already created move element
         doc.body.appendChild(moveTest.customElement);
@@ -114,7 +118,7 @@ moveTest.testFunction = function(doc) {
         moveTest.iframe2.parentNode.removeChild(moveTest.iframe2);
     } else {
         // create element
-        moveTest.customElement = doc.createElement('x-a-6');
+        moveTest.customElement = doc.createElement('x-e');
         doc.body.appendChild(moveTest.customElement);
     }
 }
